# embedded-python-testing

pyconfig/: .gitignore  CMakeLists.txt  Makefile  get-diffs.sh  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
venv-test/: .gitignore  populate.sh  print-deets-all.sh  print-deets.py  print-deets.sh
